[gd_scene load_steps=2 format=2]

[ext_resource path="res://Globals/SaveAndLoad.gd" type="Script" id=1]

[node name="SaveAndLoad" type="Node2D"]
position = Vector2( 805.867, 10.2527 )
scale = Vector2( 3.95691, 3.49927 )
z_index = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 68.0
margin_bottom = 14.0
text = "Savegame:"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 68.0
margin_bottom = 38.0
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 68.0
margin_bottom = 62.0
text = "Load"

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 68.0
margin_bottom = 86.0
text = "Delete"
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
